--- a/src/BreadCrumb.latte
+++ b/src/BreadCrumb.latte
@@ -6,7 +6,7 @@
 
 <ol class="breadcrumb">
 	<li n:foreach="$links as $link" {if !$link['link']}class="active"{/if}>
-		<i class="{$link['icon']}" n:if="$link['icon']"></i>
+		<i class="{$link['icon']}" n:if="$link['icon']" aria-hidden="true"></i>
 		{if $link['link']}
 			<a href="{$link['link']}" title="{$link['title']}">{$link['title']}</a>
 		{else}
